--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cryptography==3.4.8
 cycler==0.10.0
 defusedxml==0.7.1
 dj-database-url==0.5.0
+dj-rest-auth==2.1.11
 Django==3.2.4
 django-allauth==0.45.0
 django-crispy==1.8.1
@@ -20,7 +21,6 @@ django-map-widgets==0.3.2
 django-mapbox-location-field==1.7.3
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
-djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.8.0
 geographiclib==1.52
 geojson==2.5.0
